Main and footer section updated

--- a/index.html
+++ b/index.html
@@ -35,6 +35,61 @@
             <img src="./Assets/zibon.png" alt="">
         </section>
     </header>
+
+
+    <main>
+        <section class="skill-section">
+            <h1 class="azeret-font">Learned Technologies</h1>
+            <div class="skill-section-cards">
+                <div class="skill-card">
+                <img src="./Assets/Icons/html.png" alt="">
+                <h2 class="skill-title">HTML5</h2>
+            </div>
+            <div class="skill-card">
+                <img src="./Assets/Icons/css.png" alt="">
+                <h2 class="skill-title">CSS3</h2>
+            </div>
+            <div class="skill-card">
+                <img src="./Assets/Icons/bootstrap.png" alt="">
+                <h2 class="skill-title">BootStrap5</h2>
+            </div>
+            <div class="skill-card">
+                <img src="./Assets/Icons/css (1).png" alt="">
+                <h2 class="skill-title">Tailwind Css</h2>
+            </div>
+            <div class="skill-card">
+                <img src="./Assets/Icons/javascript.png" alt="">
+                <h2 class="skill-title">JavaScript</h2>
+            </div>
+
+            <div class="skill-card">
+                <img src="./Assets/Icons/react.png" alt="">
+                <h2 class="skill-title">React.Js</h2>
+            </div>
+            <div class="skill-card">
+                <img src="./Assets/Icons/programing.png" alt="">
+                <h2 class="skill-title">Node.Js</h2>
+            </div>
+            <div class="skill-card">
+                <img src="./Assets/Icons/database-storage.png" alt="">
+                <h2 class="skill-title">MongoDB</h2>
+            </div>
+            </div>
+
+        </section>
+
+    </main>
+
+
+    <footer>
+        <div class="footer-items">
+            <a href=""><img src="./Assets/Icons/facebook.png" alt=""></a>
+        <a href=""><img src="./Assets/Icons/instagram.png" alt=""></a>
+        <a href=""><img src="./Assets/Icons/github.png" alt=""></a>
+        <a href=""><img src="./Assets/Icons/linkedin.png" alt=""></a>
+        </div>
+        <p class="azeret-font">Copyright ©2025 All rights reserved </p>
+    </footer>
 </body>
 
 </html>
